# ekho

./: .coverage  .gitignore  AGENTS.md  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  manage.py  pyproject.toml  railway.toml  requirements.txt
backend/api/: actor_catalog_validate.py  apps.py  models.py  permissions.py  record_actor_refs.py  record_export_import.py  record_image_format_map.py  record_image_ingest.py  record_image_vocab.py  record_validators.py  serializers.py  system_identity.py  urls.py  views.py
backend/api/fixtures/: exhibit_organization_actors.json
backend/api/migrations/: 0001_initial.py  0002_record_json_payload.py  0003_actor.py  0004_system_identity_and_import_fields.py  0005_rename_api_collect_is_list_7a8b9c_idx_api_collect_is_list_8f44be_idx_and_more.py  0006_collection_responsible_department.py  0007_collection_owning_organization.py  0008_recordimage.py  0009_alter_recordimage_context.py  0010_actor_import_id.py  0011_record_is_listed.py
backend/api/tests/: test_actors.py  test_auth.py  test_collections.py  test_integration.py  test_record_image_ingest.py  test_records.py  test_seed_exhibit_catalog.py  test_views.py
backend/deploy/: docker-entrypoint.sh  nginx-railway.conf.template  supervisord.conf
backend/ekho_backend/: asgi.py  settings.py  settings_deployment.py  urls.py  wsgi.py
backend/scripts/: prep_first_run.bat  prep_first_run.sh  prep_install.ps1  prep_install.sh  prep_install.zsh  prep_start.bat  prep_start.sh  prep_start_production.bat  prep_start_production.sh
(+253 files in other folders)
